--- a/index.html
+++ b/index.html
@@ -6,10 +6,146 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
-<body>
 
+<body>
+    <header>
+        <section class="container lg:flex justify-around items-center">
+            <div class="space-x-2 ">
+                <h1 class="text-7xl uppercase"><span class="text-amber-200"> Be the Penguins</span>
+                    <br>
+                    <span class="text-indigo-900">of Winter</span>
+                </h1>
+                <p class=" text-indigo-900">Lorem Ipsum is simply dummy text of the printing
+                    and <br> typesetting industry.</p>
+                <button class="uppercase bg-lime-600 text-white py-3 px-6"><svg xmlns="http://www.w3.org/2000/svg"
+                        class="inline h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                        <path stroke-linecap="round" stroke-linejoin="round"
+                            d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z" />
+                    </svg> Buy Now</button>
+            </div>
+            <div>
+                <img src="images/model.png" alt="">
+            </div>
+        </section>
+    </header>
+    <main>
+        <!-- jacket section  -->
+
+        <section class="container my-12">
+            <h2 class="text-5xl font-bold mb-12 ml-12">Woman Jacket</h2>
+            <div class="md:grid grid-cols-3 px-12 mx-auto gap-5">
+                <!-- single jacket -->
+                <div class="shadow-lg space-x-4 space-y-4 ">
+                    <div class="bg-gray-200 rounded-lg ">
+                        <img class="w-72 mx-auto" src="images/jacket-1.png" alt="">
+                    </div>
+                    <h4 class="text-2xl font-bold text-gray">Yellow Coat Jacket </h4>
+                    <p>Lorem Ipsum is simply dummy text of the
+                        printing and typesetting industry.</p>
+                    <div class="flex justify-between">
+                        <h3 class="text-4xl font-black text-yellow-200">$234</h3>
+                        <button
+                            class="uppercase bg-lime-600 text-white py-3 px-6 bg-gradient-to-r from-green-400 to-blue-500 hover:from-pink-500 hover:to-yellow-500 ... rounded-lg"><svg
+                                xmlns="http://www.w3.org/2000/svg" class="inline h-6 w-6" fill="none"
+                                viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                                <path stroke-linecap="round" stroke-linejoin="round"
+                                    d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z" />
+                            </svg> Buy Now</button>
+                    </div>
+                </div>
+                <div class="shadow-lg space-x-4 space-y-4">
+                    <div class="bg-gray-200 rounded-lg ">
+                        <img class="w-72 mx-auto" src="images/jacket-2.png" alt="">
+                    </div>
+                    <h4 class="text-2xl font-bold text-gray">Yellow Coat Jacket </h4>
+                    <p>Lorem Ipsum is simply dummy text of the
+                        printing and typesetting industry.</p>
+                    <div class="flex justify-between">
+                        <h3 class="text-4xl font-black text-yellow-200">$234</h3>
+                        <button
+                            class="uppercase bg-lime-600 text-white py-3 px-6 bg-gradient-to-r from-green-400 to-blue-500 hover:from-pink-500 hover:to-yellow-500 ... rounded-lg"><svg
+                                xmlns="http://www.w3.org/2000/svg" class="inline h-6 w-6" fill="none"
+                                viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                                <path stroke-linecap="round" stroke-linejoin="round"
+                                    d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z" />
+                            </svg> Buy Now</button>
+                    </div>
+                </div>
+                <div class="shadow-lg space-x-4 space-y-4">
+                    <div class="bg-gray-200 rounded-lg ">
+                        <img class="w-72 mx-auto" src="images/jacket-3.png" alt="">
+                    </div>
+                    <h4 class="text-2xl font-bold text-gray">Yellow Coat Jacket </h4>
+                    <p>Lorem Ipsum is simply dummy text of the
+                        printing and typesetting industry.</p>
+                    <div class="flex justify-between">
+                        <h3 class="text-4xl font-black text-yellow-200">$234</h3>
+                        <button
+                            class="uppercase bg-lime-600 text-white py-3 px-6 bg-gradient-to-r from-green-400 to-blue-500 hover:from-pink-500 hover:to-yellow-500 ... rounded-lg"><svg
+                                xmlns="http://www.w3.org/2000/svg" class="inline h-6 w-6" fill="none"
+                                viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                                <path stroke-linecap="round" stroke-linejoin="round"
+                                    d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z" />
+                            </svg> Buy Now</button>
+                    </div>
+                </div>
+
+            </div>
+        </section>
+        <!-- bottom section -->
+        <section class="container">
+            <div class="grid grid-cols-3 px-12 mx-auto gap-5">
+                <div class="flex items-start">
+                    <div class="mr-9">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="mt-4 h-6 w-6" fill="none" viewBox="0 0 24 24"
+                            stroke="currentColor" stroke-width="2">
+                            <path stroke-linecap="round" stroke-linejoin="round"
+                                d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6" />
+                        </svg>
+                    </div>
+                    <div>
+                        <h4 class="text-lg font-semibold">Find the Perfect Fit</h4>
+                        <p>Everybody is different, which is why we
+                            offer styles for every body.</p>
+                    </div>
+                </div>
+                <div class="row-span-2 col-span-2">
+                    <img class="w-9/12 ml-32" src="images/shopping.png" alt="">
+                </div>
+                <div class="flex items-start">
+                    <div class="mr-9">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="mt-4 h-6 w-6" fill="none" viewBox="0 0 24 24"
+                            stroke="currentColor" stroke-width="2">
+                            <path stroke-linecap="round" stroke-linejoin="round"
+                                d="M7 8h10M7 12h4m1 8l-4-4H5a2 2 0 01-2-2V6a2 2 0 012-2h14a2 2 0 012 2v8a2 2 0 01-2 2h-3l-4 4z" />
+                        </svg>
+                    </div>
+                    <div>
+                        <h4 class="text-lg font-semibold">Free Exchanges</h4>
+                        <p>One of the many reasons you can shop
+                            with peace of mind.</p>
+                    </div>
+                </div>
+                <div class="flex items-start">
+                    <div class="mr-9">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="mt-4 h-6 w-6" fill="none" viewBox="0 0 24 24"
+                            stroke="currentColor" stroke-width="2">
+                            <path stroke-linecap="round" stroke-linejoin="round"
+                                d="M7 8h10M7 12h4m1 8l-4-4H5a2 2 0 01-2-2V6a2 2 0 012-2h14a2 2 0 012 2v8a2 2 0 01-2 2h-3l-4 4z" />
+                        </svg>
+                    </div>
+                    <div>
+                        <h4 class="text-lg font-semibold">Contact Our Seller</h4>
+                        <p>They are here to help you. That's quite
+                            literally what we pay them for.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
